# FSDS_NOV_deepClassifier

./: .gitignore  README.md  requirements.txt  setup.cfg
research/: st_01.ipynb  st_02.ipynb
src/deepClassifier/components/: data_ingestion.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py
